--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de Sesión - Jardín Infantil</title>
+    <title>Inicio de Sesión - Los angelitos</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
@@ -105,8 +105,8 @@
 
     <script>
         const credenciales = {
-            directora: { usuario: "directora2024", contrasena: "Jardin123" },
-            coordinadora: { usuario: "coordinadora2024", contrasena: "Alegria456" }
+            directora: { usuario: "directora2026", contrasena: "angelitos2026" },
+            coordinadora: { usuario: "coordinadora2026", contrasena: "Alegria2026" }
         };
 
         function validarCredenciales() {
