Change title from 'Jardín Infantil Alegría' to 'Los Angelitos'

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Jardín Infantil Alegría</h2>
+        <h2>Los Angelitos</h2>
         
         <div class="input-group">
             <label>Rol</label>
